# tatter-renderer

./: .gitmodules  App.cpp  App.hpp  CMakeLists.txt  CMakePresets.json  EnvironmentMap.cpp  EnvironmentMap.hpp  GuiManager.cpp  GuiManager.hpp  Material.cpp  Material.hpp  README.md  Scene.cpp  Scene.hpp  main.cpp  todo.md  vcpkg.json
model/: Suzanne.gltf
shader/: IBLprefiltering.shader  Lambert.shader  brdfLUT.shader  decodeHDR.shader  envmap.shader  forward.shader  geometrypass.shader  gltfgeometrypass.shader  gltflightingpass.shader  irradiancemap.shader  lightingpass.shader  skybox.shader  specularprefiltering.shader  test.shader  tonemap.shader
